--- a/pages/blog/2020-10-03-startups.mdx
+++ b/pages/blog/2020-10-03-startups.mdx
@@ -1,3 +1,7 @@
+import Link from "next/link";
+import { HomeOutlined } from "@ant-design/icons";
+import { Breadcrumb } from "antd";
+
 export const metadata = {
   title: "The Case For Interning at Tech Startups",
   date: 1601683200,
@@ -8,7 +12,7 @@ export const metadata = {
 
 ![Header](https://d2halst20r4hcy.cloudfront.net/wallpapers2/099/242/593/536/original/file.jpg)
 
-You’ve probably seen a multitude of articles and tech how-to videos that detail the tips and tricks to landing an internship at Big Tech companies such as Google and Microsoft. As a software engineering student at the University of Waterloo, I found this veneration of working at big FAANG companies especially hard to ignore. A huge portion of students are vying exclusively for high-profile companies (hence the “Cali or bust” catchphrase), contributing to a culture that overlooks smaller companies. However, my past summer interning at [Fractal](https://www.tryfractal.com/) showed me that there’s a ton of value in working at small, high growth startups, especially for students trying to explore and improve their skill-set and network.
+You’ve probably seen ad multitude of articles and tech how-to videos that detail the tips and tricks to landing an internship at Big Tech companies such as Google and Microsoft. As a software engineering student at the University of Waterloo, I found this veneration of working at big FAANG companies especially hard to ignore. A huge portion of students are vying exclusively for high-profile companies (hence the “Cali or bust” catchphrase), contributing to a culture that overlooks smaller companies. However, my past summer interning at [Fractal](https://www.tryfractal.com/) showed me that there’s a ton of value in working at small, high growth startups, especially for students trying to explore and improve their skill-set and network.
 
 In this article, I’ll share the benefits and takeaways I learned from my past 5 months, which hopefully might convince you to consider interning at a startup. Whether or not you are a software/computer science student, I hope you’ll find some aspect of this post useful!
 
