blog section works

--- a/pages/blog/2020-01-06-takeaways.mdx
+++ b/pages/blog/2020-01-06-takeaways.mdx
@@ -4,6 +4,7 @@ import { Breadcrumb } from "antd";
 
 export const metadata = {
   title: "Takeaways from 1A Software Engineering at Waterloo",
+  url: "2020-01-06-takeaways",
   date: 1578268800,
   length: 4,
 };
@@ -23,6 +24,7 @@ export const metadata = {
 # Takeaways from 1A Software Engineering at Waterloo
 
 Hurray, I’ve finished my first term at Waterloo! Term 1A starts early September and ends mid December, just in time for the holidays. I want to take some time to reflect on my first term, and share some tips with any prospective incoming students.
+
 ![Fall Pic](https://miro.medium.com/max/6000/1*Z_3euRAnlIwuSYn_Lz-jJA.jpeg)  
 _Fall shots from my room_
 
