added new years post

--- a/pages/blog/2020-10-03-startups.mdx
+++ b/pages/blog/2020-10-03-startups.mdx
@@ -1,7 +1,3 @@
-import Link from "next/link";
-import { HomeOutlined } from "@ant-design/icons";
-import { Breadcrumb } from "antd";
-
 export const metadata = {
   title: "The Case For Interning at Tech Startups",
   url: "2020-10-03-startups",
@@ -9,19 +5,9 @@ export const metadata = {
   length: 8,
 };
 
-<Breadcrumb>
-  <Link href="/">
-    <Breadcrumb.Item href="">
-      <HomeOutlined />
-    </Breadcrumb.Item>
-  </Link>
-  <Link href="/blog">
-    <Breadcrumb.Item href="">Blog</Breadcrumb.Item>
-  </Link>
-  <Breadcrumb.Item>{metadata.title}</Breadcrumb.Item>
-</Breadcrumb>
-
 # The Case For Interning at Tech Startups
+
+#### Oct 3, 2020
 
 ![Header](https://d2halst20r4hcy.cloudfront.net/wallpapers2/099/242/593/536/original/file.jpg)
 
