--- a/pages/blog/2020-01-06-takeaways.mdx
+++ b/pages/blog/2020-01-06-takeaways.mdx
@@ -1,7 +1,3 @@
-import Link from "next/link";
-import { HomeOutlined } from "@ant-design/icons";
-import { Breadcrumb } from "antd";
-
 export const metadata = {
   title: "Takeaways from 1A Software Engineering at Waterloo",
   url: "2020-01-06-takeaways",
@@ -9,19 +5,9 @@ export const metadata = {
   length: 4,
 };
 
-<Breadcrumb>
-  <Link href="/">
-    <Breadcrumb.Item href="">
-      <HomeOutlined />
-    </Breadcrumb.Item>
-  </Link>
-  <Link href="/blog">
-    <Breadcrumb.Item href="">Blog</Breadcrumb.Item>
-  </Link>
-  <Breadcrumb.Item>{metadata.title}</Breadcrumb.Item>
-</Breadcrumb>
-
 # Takeaways from 1A Software Engineering at Waterloo
+
+### Jan 6, 2020
 
 Hurray, I’ve finished my first term at Waterloo! Term 1A starts early September and ends mid December, just in time for the holidays. I want to take some time to reflect on my first term, and share some tips with any prospective incoming students.
 
