new project links

--- a/pages/blog/2020-12-31-reflections.mdx
+++ b/pages/blog/2020-12-31-reflections.mdx
@@ -46,7 +46,7 @@ When asked about my New Year's resolution, I shied away from listing quantifiabl
 
 I think I want to spend the next year properly digesting and reflecting, and to continue daring to try new things, so that I will have a clear conviction about what I can be comfortable doing for the entirety of 2022.
 
-There some actionable tasks that I'll try this year:
+There some actionable tasks that I'll want to try this year:
 
 1. Write more
 2. Read more
