added what I learned every day

--- a/pages/blog/2020-12-31-reflections.mdx
+++ b/pages/blog/2020-12-31-reflections.mdx
@@ -18,6 +18,7 @@ Summing up the big events and milestones that happened for me this year, roughly
 - did half of my 2A term at Waterloo, then went home (due to the pandemic) and finished the rest there
 - did a month-long hackathon
 - did an internship at [Fractal Computers](/blog/2020-10-03-startups)
+- started [logging](/todayilearned) what I learned every day
 - bought an electric keyboard and started relearning the piano
 - got into growing succulents and cooking
 - joined the Mozilla Builders spring/summer batch and tried to change the food distribution system with my friends
