--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -7,28 +7,43 @@ _The landing page. I'm pretty happy with how the dark cyberpunk vibe turned out!
 
 When I started this project, I told myself that this time, I _will_ complete this thing. I set a reasonable scope, and had a simple goal. Interestingly, the majority of the project was built out during my time at a communal house in New Mexico, when there were maximum distractions. I'm pretty happy that things worked out and I got to make something to share with real users.
 
-<br />
+### Web player
 
-<center>
-  <img src="/images/projects/noisy/playerGif.gif" />
-</center>
-*The web player*
+If the site is still up, you can play with the web player embed below.
 
-<br />
-<br />
+<div style={{ position: "relative", paddingBottom: "750px", height: 0 }}>
+  <iframe
+    frameborder="0"
+    src="https://noisy.live/player"
+    style={{
+      position: "absolute",
+      top: 0,
+      left: 0,
+      width: "100%",
+      height: "100%",
+    }}
+    allowfullscreen
+  />
+</div>
+
 As of this writing, the Discord bot has been added to 200 servers, combining to
 a total of more than 128000 users. Another cool thing that happened was that I
 actually got a job offer from iDreamSky, after the CEO saw Noisy on
-<a href="https://www.producthunt.com/posts/noisy-2"> Producthunt</a>. I always thought
-that getting opportunities from personal projects was a Twitter fable, but this experience
-proved that it's actually very simple and common. So if you're wondering whether
-or not you should build that project you've always wanted to build for the longest
-time, just do it! (and do it because you're interested, opportunities will come naturally
-after that)
+
+[Producthunt](https://www.producthunt.com/posts/noisy-2). I always
+thought that getting opportunities from personal projects was a Twitter fable,
+but this experience proved that it's actually very simple and common. So if
+you're wondering whether or not you should build that project you've always
+wanted to build for the longest time, just do it! (and do it because you're
+interested, opportunities will come naturally after that)
 
 My big takeaway from this project is that music generation has now matured to a point where we can build agument digital meeting spaces with it as background music, to a really high degree. I think we'll see a lot more of this in the future.
 
 ---
+
+## Code
+
+Github: https://github.com/JonathanXu1/noisy-bot
 
 ## Some promo images
 
