added hackathon post

--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -26,16 +26,7 @@ If the site is still up, you can play with the web player embed below.
   />
 </div>
 
-As of this writing, the Discord bot has been added to 200 servers, combining to
-a total of more than 128000 users. Another cool thing that happened was that I
-actually got a job offer from iDreamSky, after the CEO saw Noisy on
-
-[Producthunt](https://www.producthunt.com/posts/noisy-2). I always
-thought that getting opportunities from personal projects was a Twitter fable,
-but this experience proved that it's actually very simple and common. So if
-you're wondering whether or not you should build that project you've always
-wanted to build for the longest time, just do it! (and do it because you're
-interested, opportunities will come naturally after that)
+As of this writing, the Discord bot has been added to 200 servers, combining to a total of more than 128000 users. Another cool thing that happened was that I actually got a job offer from iDreamSky, after the CEO saw Noisy on [Producthunt](https://www.producthunt.com/posts/noisy-2). I always thought that getting opportunities from personal projects was a Twitter fable, but this experience proved that it's actually very simple and common. So if you're wondering whether or not you should build that project you've always wanted to build for the longest time, just do it! (and do it because you're interested, opportunities will come naturally after that)
 
 My big takeaway from this project is that music generation has now matured to a point where we can build agument digital meeting spaces with it as background music, to a really high degree. I think we'll see a lot more of this in the future.
 
