--- a/pages/blog/2020-07-25-on-hackathons.mdx
+++ b/pages/blog/2020-07-25-on-hackathons.mdx
@@ -49,7 +49,7 @@ My favorite hackathon memories were all made during those first few years. Most 
 
 And hackathons were not just competitions; they were social galas. People came in, dressed in dinosaur and astronaut costumes, feeling fully welcomed within a special culture that valued uniqueness and individual wackiness. Hackathons were gaining in momentum and energy: organizers managed to come up with ever more creative events (starting traditions such as spicy noodle challenges, bubble tea tables, and karaoke), and company sponsorships were skyrocketing. This was when some events got large enough to rent entire football stadiums and venues for the first and last time. Here, I got to meet the most unique and interesting people of my hackathon career. It was a great time.
 
-![cd hack project](/images/2020-07-25-on-hackathons/cd_hack.jpg)
+![cd hack project](/images/2020-07-25-on-hackathons/cd_hack.JPG)
 _A cool hardware hack that etched content onto CDs_
 
 Having this baseline in mind, we can see that our current events are a far cry from what they used to be.
