added some memes

--- a/pages/blog/2021-01-27-stocks.mdx
+++ b/pages/blog/2021-01-27-stocks.mdx
@@ -26,13 +26,13 @@ _Disclaimer: The references below are an opinion and is for information purposes
 
 Before making a purchase, decide for yourself what timeframe you prefer to trade on beforehand. How long are you okay with planning for?
 
-When I first started, I did not invest with longer term market trends in mind. I overreacted based on short term spikes and dips, which weren't compatible with my trading behaviour, which involved checking the stock market every month or so. A missed opportunity that taught me this lesson was when I decided not to purchase TSLA stock when it was at $400 in March. Instead of looking at the long term outlook, I waited to snag some shares whenever it would hit $250, which actually never happened. At the time, a $150 difference seemed significant. Now, the pre-split stock is valued at $3,456. A great opportunity was missed because I over-optimized for the short term.
+When I first started, I did not invest with longer term market trends in mind. I overreacted based on short term spikes and dips, which weren't compatible with my trading behavior, which involved checking the stock market every month or so. A missed opportunity that taught me this lesson was when I decided not to purchase TSLA stock when it was at $400 in March. Instead of looking at the long term outlook, I waited to snag some shares whenever it would hit $250, which actually never happened. At the time, a $150 difference seemed significant. Now, the pre-split stock is valued at $3,456. A great opportunity was missed because I over-optimized for the short term.
 
 ![tesla graph](/images/2021-01-27-stocks/tsla.png)
 
 Trading very short term is also more costly if you count in the commissions that your brokerage may make on a per-trade basis.
 
-### 2. Commit when you decide (steady hands)
+### 2. Commit when you decide (💎✋)
 
 A problem that I faced early on when making trades was the uncertainty that came with trading stocks as a novice. Every time I sent in an order, I would second-guess myself. This wasn't good because I would miss out on great opportunities.
 
@@ -40,7 +40,7 @@ The solution: Second guess yourself as much as you want before you buy or sell. 
 
 The stock market is constantly changing. Factors may change, and new trends are always happening. Just go with the flow, and think about your next move instead of mulling over the irreversible past.
 
-For example, I bought 15 shares of NIO at $17 in september, when the stock was at the highest it had ever been. I decided to hold despite fluctuations because I believed in the upside potential of the Chinese EV sector. Later, I sold it at $58.
+For example, I bought 15 shares of NIO at $17 in September, when the stock was at the highest it had ever been. I decided to hold despite fluctuations because I believed in the upside potential of the Chinese EV sector. Later, I sold it at $58. I'm also holding my GME shares, partly for the meme, but also because I really think we'll see some big upside in the near future.
 
 ![nio graph](/images/2021-01-27-stocks/nio.png)
 
@@ -54,9 +54,9 @@ One situation that brought this lesson home was when I ironically bought GME on 
 
 There were many signs that this would actually happen. On Reddit, [analysis](https://www.reddit.com/r/wallstreetbets/comments/g0lc0j/gamestop_gme_the_biggest_short_squeeze_of_your/) about the short squeeze have been floating around for a year, and were really starting to gain momentum by December. If you've done your research and are confident in the potential of a stock, just go for it. There may not be many chances to act ahead of the curve.
 
-### 4. Stocks is about group behaviour, not finance
+### 4. Stocks is about group behavior, not finance
 
-Traditional investment strategy uses well-refined [strategies](https://www.investopedia.com/investing/investing-strategies/), but that's being challenged. Now, with the advent of commission free trading, we are seeing the emergence of a new player in the field: the retail investor. Apps like Robinhood and Wealthsimple have replaced Tiktok in the top charts, and the number of individual traders is skyrocketing. r/wallstreetbets has exploded from 1M to 7M+ users in the span of a month, and the stock market is getting more media attention than ever. The retail investor (like me) usually does not follow the time-old strategies used by institutional investors, which means that herd mentality now has some real impacts on the market. The use of memes and public investment advice actually influcences the buying behaviour of thousands of traders, many of whom are willing to bet on high risk, high reward ventures. In my opinion, I think that being able to predict whether people will buy can be just as useful as predicting the success of a company.
+Traditional investment strategy uses well-refined [strategies](https://www.investopedia.com/investing/investing-strategies/), but that's being challenged. Now, with the advent of commission free trading, we are seeing the emergence of a new player in the field: the retail investor. Apps like Robinhood and Wealthsimple have replaced Tiktok in the top charts, and the number of individual traders is skyrocketing. r/wallstreetbets has exploded from 1M to 7M+ users in the span of a month, and the stock market is getting more media attention than ever. The retail investor (like me) usually does not follow the time-old strategies used by institutional investors, which means that herd mentality now has some real impacts on the market. The use of memes and public investment advice actually influences the buying behavior of thousands of traders, many of whom are willing to bet on high risk, high reward ventures. In my opinion, I think that being able to predict whether people will buy can be just as useful as predicting the success of a company.
 
 ![efficient market hypothesis](/images/2021-01-27-stocks/efficient.jpg)
 
@@ -70,16 +70,25 @@ The best opportunities for significant gains are when you act before the market.
 
 At the end of the day, you can always suffer heavy losses at any time. That can be mitigated by diversifying your portfolio, and staying aware of the risk in your account.
 
-My preference is to have 60% of my portfolio in long term industry trends (for example, EV, AI, networking and microprocessing companies). 30% of my account is for mid term investments, which I think will have strong movement in the short to mid term. For the memes, the remaining 10% of my portfolio in high risk options, which I would be totally okay with losing. Every month or so, I would rebalance my account to keep these porportions in check.
+My preference is to have 60% of my portfolio in long term industry trends (for example, EV, AI, networking and microprocessing companies). 30% of my account is for mid term investments, which I think will have strong movement in the short to mid term. For the memes, the remaining 10% of my portfolio in high risk options, which I would be totally okay with losing. Every month or so, I would rebalance my account to keep these proportions in check.
+
+### 7. Have fun!
+
+Stock trading can be stressful, especially if you have a lot on the line. My experience with trading has been a positive experience overall, especially since I have come to terms with the chance of losing my entire account balance. Trading with that mindset lets me make some YOLO plays that bring some excitement to my account. It's even better when I'm trading meme stocks that are hot topics on Reddit memes.
+
+![thanos meme](/images/2021-01-27-stocks/thanos.png)
 
 ---
 
 ### Options trading
 
-I traded exclusively on stocks on Wealthsimple when I started my experiment. Later, I transferred my funds to a Questrade account so that I could start trading options. There are some [cool guides](https://www.optionseducation.org/referencelibrary/brochures-literature/page-assets/options-strategies-quick-guide.aspx) on options trading, but in essence options are higher risk contracts that speculate on volatility. Call options let you buy a stock at a price, and put options let you sell a stock at a price. If a stock goes up sharply, I would make significantly more from a call option rather than from holding the stock. As such, options can provide a ton of profit if excersiced properly, but can also bring an account to 0 (or billions in the red, case [Melvin Capital](https://markets.businessinsider.com/news/stocks/short-sellers-sitting-on-19-billion-of-losses-on-gamestop-data-shows-2021-1-1030020684)). If you want to limit your risk, I'd advise againt making options a significant portion of your account.
+I traded exclusively on stocks on Wealthsimple when I started my experiment. Later, I transferred my funds to a Questrade account so that I could start trading options. There are some [cool guides](https://www.optionseducation.org/referencelibrary/brochures-literature/page-assets/options-strategies-quick-guide.aspx) on options trading, but in essence options are higher risk contracts that speculate on volatility. Call options let you buy a stock at a price, and put options let you sell a stock at a price. If a stock goes up sharply, I would make significantly more from a call option rather than from holding the stock. As such, options can provide a ton of profit if exercised properly, but can also bring an account to 0 (or billions in the red, case [Melvin Capital](https://markets.businessinsider.com/news/stocks/short-sellers-sitting-on-19-billion-of-losses-on-gamestop-data-shows-2021-1-1030020684)). If you want to limit your risk, I'd advise against making options a significant portion of your account.
 
 ---
 
 Looking back, I definitely have no regrets from putting $1k into this experiment. I learned a ton about the stock market, which I definitely would not have done, if I did put money in the game. The stock market underscores a huge potential of the free market, and reflects and catalyzes a lot of change and trends in the economy. I'd highly recommend you to explore this space if you haven't already, just don't put in more than you can lose! I'm looking forward to seeing where this trading account will go over the next year.
+
+Also, don't overthink it! I feel that the less I think about a decision, the more gains I make. Although these definitely are interesting times.
+![smooth brain meme](/images/2021-01-27-stocks/smoothBrain.png)
 
 If you have any questions about trading, market trends, and brokerages, I'm always down to chat! Feel free to reach me at any of the handles you can find on my website. May your stocks shoot past the moon, and your pockets be blessed with countless juicy tendies!
