added more lessons

--- a/pages/blog/2021-01-27-stocks.mdx
+++ b/pages/blog/2021-01-27-stocks.mdx
@@ -52,7 +52,7 @@ One situation that brought this lesson home was when I ironically bought GME on 
 
 ![gme meme](/images/2021-01-27-stocks/hodl.png)
 
-There were many signs that this would actually happen. On Reddit, [analysis](https://www.reddit.com/r/wallstreetbets/comments/g0lc0j/gamestop_gme_the_biggest_short_squeeze_of_your/) about the short squeeze have been floating around for a year, and were really starting to gain momentum by December. If you've done your research and are confident in the potential of a stock, just go for it. There may not be many chances to act ahead of the curve.
+There were many signs that this would actually happen. On Reddit, [analyses](https://www.reddit.com/r/wallstreetbets/comments/g0lc0j/gamestop_gme_the_biggest_short_squeeze_of_your/) about the short squeeze have been floating around for a year, and were really starting to gain momentum by December. If you've done your research and are confident in the potential of a stock, just go for it. There may not be many chances to act ahead of the curve.
 
 ### 4. Stocks is about group behavior, not finance
 
